[project]
name = "subvenom"
version = "0.1.0"
description = "Subdomain & Tech Stack Intelligence — multi-source, zero false positives"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "CobraSEC", email = "cobrasec@proton.me"}
]
keywords = ["security", "recon", "subdomain", "bug-bounty", "pentest", "osint"]

dependencies = [
    "requests>=2.28",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.scripts]
subvenom = "subvenom:main"

[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["subvenom"]
